#
# See LICENSE for more information about licensing
#  Copyright 2023
#
# Author: Luis G. Leon Vega <luis.leon@ieee.org>
#

lib_headers = [
  files('arg-parser.hpp'),
  files('status.hpp'),
  files('proc/thread-tree.hpp'),
]

# -----------------------------------------------------------------------------
# Headers installation
# -----------------------------------------------------------------------------

install_headers(lib_headers, subdir : 'efimon')
