#
# See LICENSE for more information about licensing
#  Copyright 2023
#
# Author: Luis G. Leon Vega <luis.leon@ieee.org>
#

lib_efimon_sources += [
  files('arg-parser.cpp'),
  files('proc/io.cpp'),
  files('proc/list.cpp'),
  files('proc/meminfo.cpp'),
  files('proc/net.cpp'),
  files('proc/stat.cpp'),
  files('proc/thread-tree.cpp'),
  files('logger/sqlite.cpp'),
  files('perf/record.cpp'),
  files('uptime.cpp'),
]
