#
# See LICENSE for more information about licensing
#  Copyright 2024
#
# Author: Luis G. Leon Vega <luis.leon@ieee.org>
#

lib_proc_headers = []
lib_proc_headers += [
  files('cpuinfo.hpp'),
  files('io.hpp'),
  files('list.hpp'),
  files('meminfo.hpp'),
  files('net.hpp'),
  files('stat.hpp'),
  files('thread-tree.hpp'),
]
