#
# See LICENSE for more information about licensing
#  Copyright 2024
#
# Author: Luis G. Leon Vega <luis.leon@ieee.org>
#

lib_readings_headers = []
lib_readings_headers += [
  files('cpu-readings.hpp'),
  files('fan-readings.hpp'),
  files('instruction-readings.hpp'),
  files('io-readings.hpp'),
  files('net-readings.hpp'),
  files('ram-readings.hpp'),
  files('psu-readings.hpp'),
  files('gpu-readings.hpp'),
]
